# kiki

./: .gitignore  PLAN.md  README.md  codex.txt  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.js
.codex/environments/: environment.toml
docs/: architecture.md  runbook.md  setup.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  main.rs  tray.rs
src/adapters/github/: githubHttpAdapter.ts
src/adapters/secrets/: keychainAdapter.ts
src/adapters/slack/: slackHttpAdapter.ts
src/adapters/store/: sqliteStoreAdapter.ts
src/core/models/: defaults.ts  types.ts
src/core/rules/: classifiers.ts  estimateParser.ts  focus.ts  notificationDecision.ts
src/core/services/: notificationPipeline.ts  prViews.ts
src/lib/: appState.ts  openExternal.ts  runtime.ts  time.ts
src/ports/: github.ts  secrets.ts  slack.ts  store.ts
src/test/: estimateParser.test.ts  pipeline.test.ts  prViews.test.ts  rules.test.ts
src/ui/components/: DebugPanel.tsx  FocusModeTransition.tsx  InboxTable.tsx  KikiMark.tsx  KikiStateIcon.tsx  PrTable.tsx  RecentNotifications.tsx  SettingsPanel.tsx
src/ui/styles/: app.css
