[package]
name = "kiki"
version = "0.2.0"
description = "Kiki macOS app"
authors = ["Kiki"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
keyring = "3"
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
